tests/NormalTests/paczka1/fuzzy1/52302820.err
Error in line 23: pOkfHm8Uhf A735 24,7
Error in line 32: urPqX9Ds A916 37,3
